<resources>
    <string name="app_name">排班助手</string>
    <string name="created_scheduling">创建的排班</string>
    <string name="add_icon">+</string>
    <string name="new_scheduling">新建排班</string>
    <string name="input_file_name">输入文件名字</string>
    <string name="create_success">创建成功</string>
    <string name="create_fail">创建失败</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="set_new_scheduling_rule">设置新排班的规则</string>
    <string name="create_new_rule">创建新的规则</string>
    <string name="use_save_rule_file">使用已保存的规则文件</string>
    <string name="select_rule">选择规则文件</string>
    <string name="morning_days">早读检查的天数</string>
    <string name="morning_floor">早读检查的楼层数</string>
    <string name="morning_people">早读检查的人数</string>
    <string name="morning_start_position">早读从星期几开始</string>
    <string name="afternoon_days">下午第四节检查的天数</string>
    <string name="afternoon_floor">下午第四节检查的楼层数</string>
    <string name="afternoon_people">下午第四节检查的人数</string>
    <string name="afternoon_start_position">下午第四节从星期几开始</string>
    <string name="night_days">晚自习检查天数</string>
    <string name="night_floor">晚自习检查的楼层数</string>
    <string name="night_people">晚自习检查的人数</string>
    <string name="night_start_position">晚自习从星期几开始</string>
    <string name="night_4_days">晚上第四节检查天数</string>
    <string name="night_4_floor">晚上第四节检查的楼层数</string>
    <string name="night_4_people">晚上第四节检查的人数</string>
    <string name="night_4_start_position">晚上第四节从星期几开始</string>
    <string name="not_more_than">一个人一天最多几个班</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="save_change">保存当前更改</string>
    <string name="next">下一个</string>
    <string name="add_people">添加成员</string>
    <string name="add">添加</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="save_member">保存当前成员</string>
    <string name="select_save_file">选择已保存的文件</string>
</resources>